--- a/index.html
+++ b/index.html
@@ -109,67 +109,32 @@
                       <div class="col-lg-3 col-md-4 col-sm-6 my-2">
                           <div class="card text-center">
                               <div class="card-body">
-                                  <img src="imgs/1.jpeg" class="mb-3 w-75" alt="coach img">
-                                  <h6 class="fw-light text-danger">hp cor i5 1030 <br> Ram : 16Go <br> disque : 256 SSD </h6>
+                                  <img src="imgs/1.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
+                                  <h6 id="text-hover" class="fw-light text-danger">hp cor i5 1030 <br> Ram : 16Go <br> disque : 256 SSD </h6>
                               </div>
                           </div>
                       </div>
                       <div class="col-lg-3 col-md-4 col-sm-6 my-2">
                           <div class="card text-center">
                               <div class="card-body">
-                                  <img src="imgs/11.jpeg" class="mb-3 w-75" alt="coach img">
-                                  <h6 class="fw-light text-danger">hp cor i5 1040 <br> Ram : 16Go <br> disque : 500 SSD</h6>
+                                  <img src="imgs/11.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
+                                  <h6 id="text-hover" class="fw-light text-danger">hp cor i5 1040 <br> Ram : 16Go <br> disque : 500 SSD</h6>
                               </div>
                           </div>
                       </div>
                       <div class="col-lg-3 col-md-4 col-sm-6 my-2">
                           <div class="card text-center">
                               <div class="card-body">
-                                  <img src="imgs/2.png" class="mb-3 w-75" alt="coach img">
-                                  <h6 class="fw-light text-danger">ALL in ONe <br> Ram : 16Go <br> disque : 256 SSD</h6>
+                                  <img src="imgs/2.png" class="mb-3 w-75" alt="coach img" id="image-hover">
+                                  <h6 id="text-hover" class="fw-light text-danger">ALL in ONe <br> Ram : 16Go <br> disque : 256 SSD</h6>
                               </div>
                           </div>
                       </div>
                       <div class="col-lg-3 col-md-4 col-sm-6 my-2">
                           <div class="card text-center">
                               <div class="card-body">
-                                  <img src="imgs/4.jpeg" class="mb-3 w-75" alt="coach img">
-                                  <h6 class="fw-light text-danger">Casque <br> Support <br> Souris</h6>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-
-                  <div class="row">
-                      <div class="col-lg-3 col-md-4 col-sm-6 my-2">
-                          <div class="card text-center">
-                              <div class="card-body">
-                                  <img src="imgs/a1.jpeg" class="mb-3 w-75" alt="coach img">
-                                  <h6 class="fw-light text-danger">Macbook pro <br> Ram : 16Go <br> disque : 256 SSD</h6>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="col-lg-3 col-md-4 col-sm-6 my-2">
-                          <div class="card text-center">
-                              <div class="card-body">
-                                  <img src="imgs/a2.jpeg" class="mb-3 w-75" alt="coach img">
-                                  <h6 class="fw-light text-danger">Macbook air <br> Ram : 32Go <br> disque : 500 SSD</h6>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="col-lg-3 col-md-4 col-sm-6 my-2">
-                          <div class="card text-center">
-                              <div class="card-body">
-                                  <img src="imgs/a3.jpeg" class="mb-3 w-75" alt="coach img">
-                                  <h6 class="fw-light text-danger">Macbook air 2019 <br> Ram : 16Go <br> disque : 500 SSD</h6>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="col-lg-3 col-md-4 col-sm-6 my-2">
-                          <div class="card text-center">
-                              <div class="card-body">
-                                  <img src="imgs/a4.jpeg" class="mb-3 w-75" alt="coach img">
-                                  <h6 class="fw-light text-danger">Macbook air m2 <br> Ram : 32Go <br> disque : 256 SSD</h6>
+                                  <img src="imgs/4.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
+                                  <h6 id="text-hover" class="fw-light text-danger">Casque <br> Support <br> Souris</h6>
                               </div>
                           </div>
                       </div>
@@ -179,67 +144,32 @@
                       <div class="col-lg-3 col-md-4 col-sm-6 my-2">
                           <div class="card text-center">
                               <div class="card-body">
-                                  <img src="imgs/b1.jpeg" class="mb-3 w-75" alt="coach img">
-                                  <h6 class="fw-light text-danger">Samsung <br> A32 <br> Ram : 6</h6>
+                                  <img src="imgs/a1.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
+                                  <h6 id="text-hover" class="fw-light text-danger">Macbook pro <br> Ram : 16Go <br> disque : 256 SSD</h6>
                               </div>
                           </div>
                       </div>
                       <div class="col-lg-3 col-md-4 col-sm-6 my-2">
                           <div class="card text-center">
                               <div class="card-body">
-                                  <img src="imgs/b2.jpeg" class="mb-3 w-75" alt="coach img">
-                                  <h6 class="fw-light text-danger">Samsung <br> A56 <br> Ram : 8</h6>
+                                  <img src="imgs/a2.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
+                                  <h6 id="text-hover" class="fw-light text-danger">Macbook air <br> Ram : 32Go <br> disque : 500 SSD</h6>
                               </div>
                           </div>
                       </div>
                       <div class="col-lg-3 col-md-4 col-sm-6 my-2">
                           <div class="card text-center">
                               <div class="card-body">
-                                  <img src="imgs/b3.jpeg" class="mb-3 w-75" alt="coach img">
-                                  <h6 class="fw-light text-danger">Samsung <br> S 10+ <br> Ram : 8</h6>
+                                  <img src="imgs/a3.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
+                                  <h6 id="text-hover" class="fw-light text-danger">Macbook air 2019 <br> Ram : 16Go <br> disque : 500 SSD</h6>
                               </div>
                           </div>
                       </div>
                       <div class="col-lg-3 col-md-4 col-sm-6 my-2">
                           <div class="card text-center">
                               <div class="card-body">
-                                  <img src="imgs/b4.jpeg" class="mb-3 w-75" alt="coach img">
-                                  <h6 class="fw-light text-danger">Samsung <br> S 24 <br> Ram : 6</h6>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-
-                  <div class="row">
-                      <div class="col-lg-3 col-md-4 col-sm-6 my-2">
-                          <div class="card text-center">
-                              <div class="card-body">
-                                  <img src="imgs/c1.jpeg" class="mb-3 w-75" alt="coach img">
-                                  <h6 class="fw-light text-danger">iPhone <br> XR <br> Ram : 6</h6>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="col-lg-3 col-md-4 col-sm-6 my-2">
-                          <div class="card text-center">
-                              <div class="card-body">
-                                  <img src="imgs/c2.jpeg" class="mb-3 w-75" alt="coach img">
-                                  <h6 class="fw-light text-danger">iPhone <br> 12 pro <br> Ram : 8</h6>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="col-lg-3 col-md-4 col-sm-6 my-2">
-                          <div class="card text-center">
-                              <div class="card-body">
-                                  <img src="imgs/c3.jpeg" class="mb-3 w-75" alt="coach img">
-                                  <h6 class="fw-light text-danger">iPhone <br> 14 promax <br> Ram : 16</h6>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="col-lg-3 col-md-4 col-sm-6 my-2">
-                          <div class="card text-center">
-                              <div class="card-body">
-                                  <img src="imgs/c4.jpeg" class="mb-3 w-75" alt="coach img">
-                                  <h6 class="fw-light text-danger">iPhone <br> 15 promax <br> Ram : 16</h6>
+                                  <img src="imgs/a4.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
+                                  <h6 id="text-hover" class="fw-light text-danger">Macbook air m2 <br> Ram : 32Go <br> disque : 256 SSD</h6>
                               </div>
                           </div>
                       </div>
@@ -249,32 +179,102 @@
                       <div class="col-lg-3 col-md-4 col-sm-6 my-2">
                           <div class="card text-center">
                               <div class="card-body">
-                                  <img src="imgs/d1.jpeg" class="mb-3 w-75" alt="coach img">
-                                  <h6 class="fw-light text-danger">Casque <br> bluetooth <br>Sans fil</h6>
+                                  <img src="imgs/b1.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
+                                  <h6 id="text-hover" class="fw-light text-danger">Samsung <br> A32 <br> Ram : 6</h6>
                               </div>
                           </div>
                       </div>
                       <div class="col-lg-3 col-md-4 col-sm-6 my-2">
                           <div class="card text-center">
                               <div class="card-body">
-                                  <img src="imgs/d2.jpeg" class="mb-3 w-75" alt="coach img">
-                                  <h6 class="fw-light text-danger">écouteur <br> bluetooth <br>Sans fil</h6>
+                                  <img src="imgs/b2.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
+                                  <h6 id="text-hover" class="fw-light text-danger">Samsung <br> A56 <br> Ram : 8</h6>
                               </div>
                           </div>
                       </div>
                       <div class="col-lg-3 col-md-4 col-sm-6 my-2">
                           <div class="card text-center">
                               <div class="card-body">
-                                  <img src="imgs/d3.jpeg" class="mb-3 w-75" alt="coach img">
-                                  <h6 class="fw-light text-danger">écouteur <br> type: C<br>fil</h6>
+                                  <img src="imgs/b3.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
+                                  <h6 id="text-hover" class="fw-light text-danger">Samsung <br> S 10+ <br> Ram : 8</h6>
                               </div>
                           </div>
                       </div>
                       <div class="col-lg-3 col-md-4 col-sm-6 my-2">
                           <div class="card text-center">
                               <div class="card-body">
-                                  <img src="imgs/d4.png" class="mb-3 w-75" alt="coach img">
-                                  <h6 class="fw-light text-danger">Casque <br> bluetooth <br>Sans fil</h6>
+                                  <img src="imgs/b4.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
+                                  <h6 id="text-hover" class="fw-light text-danger">Samsung <br> S 24 <br> Ram : 6</h6>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+
+                  <div class="row">
+                      <div class="col-lg-3 col-md-4 col-sm-6 my-2">
+                          <div class="card text-center">
+                              <div class="card-body">
+                                  <img src="imgs/c1.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
+                                  <h6 id="text-hover" class="fw-light text-danger">iPhone <br> XR <br> Ram : 6</h6>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="col-lg-3 col-md-4 col-sm-6 my-2">
+                          <div class="card text-center">
+                              <div class="card-body">
+                                  <img src="imgs/c2.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
+                                  <h6 id="text-hover" class="fw-light text-danger">iPhone <br> 12 pro <br> Ram : 8</h6>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="col-lg-3 col-md-4 col-sm-6 my-2">
+                          <div class="card text-center">
+                              <div class="card-body">
+                                  <img src="imgs/c3.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
+                                  <h6  id="text-hover"class="fw-light text-danger">iPhone <br> 14 promax <br> Ram : 16</h6>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="col-lg-3 col-md-4 col-sm-6 my-2">
+                          <div class="card text-center">
+                              <div class="card-body">
+                                  <img src="imgs/c4.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
+                                  <h6 id="text-hover" class="fw-light text-danger">iPhone <br> 15 promax <br> Ram : 16</h6>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+
+                  <div class="row">
+                      <div class="col-lg-3 col-md-4 col-sm-6 my-2">
+                          <div class="card text-center">
+                              <div class="card-body">
+                                  <img src="imgs/d1.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
+                                  <h6 id="text-hover" class="fw-light text-danger">Casque <br> bluetooth <br>Sans fil</h6>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="col-lg-3 col-md-4 col-sm-6 my-2">
+                          <div class="card text-center">
+                              <div class="card-body">
+                                  <img src="imgs/d2.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
+                                  <h6 id="text-hover" class="fw-light text-danger">écouteur <br> bluetooth <br>Sans fil</h6>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="col-lg-3 col-md-4 col-sm-6 my-2">
+                          <div class="card text-center">
+                              <div class="card-body">
+                                  <img src="imgs/d3.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
+                                  <h6 id="text-hover" class="fw-light text-danger">écouteur <br> type: C<br>fil</h6>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="col-lg-3 col-md-4 col-sm-6 my-2">
+                          <div class="card text-center">
+                              <div class="card-body">
+                                  <img src="imgs/d4.png" class="mb-3 w-75" alt="coach img" id="image-hover">
+                                  <h6 id="text-hover" class="fw-light text-danger">Casque <br> bluetooth <br>Sans fil</h6>
                               </div>
                           </div>
                       </div>
@@ -282,7 +282,7 @@
               </div>
           </section>
 
-        <footer class="footer pt-5 pb-1 text-white bg-success mt-3" id="footerrr">
+        <footer class="footer pt-5 pb-1 text-white mt-3 text-start" id="footerrr">
           <div class="container-fluid">
               <div class="row mb-5">
                   <div class="col-lg-2 col-md-3 col-sm-4 mb-3">
@@ -306,9 +306,9 @@
                   </div>
                   <div class="col-lg-2 col-md-3 col-sm-4 mb-3 gap-3">
                       <h5 class="mb-3 fw-light"><Ri:a>Reseau Sociaux</Ri:a></h5>
-                       <a href="https://www.linkedin.com/in/mamadou-saliou-diallo-0563b3220/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3Bwel9U3V2S6GWhF%2FPoe9S3w%3D%3D" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-                      <a href="https://wa.me/777087976" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-                      <a href="https://www.facebook.com/profile.php?id=100072074355703" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                       <a  href="https://www.linkedin.com/in/mamadou-saliou-diallo-0563b3220/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3Bwel9U3V2S6GWhF%2FPoe9S3w%3D%3D" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                       <a  href="https://wa.me/777087976" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                       <a  href="https://www.facebook.com/profile.php?id=100072074355703" target="_blank"><i class="fa-brands fa-facebook"></i></a>
 
 
                   </div>
