--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                           <div class="card text-center">
                               <div class="card-body">
                                   <img src="imgs/1.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
-                                  <h6 id="text-hover" class="fw-light text-danger">hp cor i5 1030 <br> Ram : 16Go <br> disque : 256 SSD </h6>
+                                  <h6 id="text-hover" class="fw-light text-dark">hp cor i5 1030 <br> Ram : 16Go <br> disque : 256 SSD </h6>
                               </div>
                           </div>
                       </div>
@@ -118,7 +118,7 @@
                           <div class="card text-center">
                               <div class="card-body">
                                   <img src="imgs/11.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
-                                  <h6 id="text-hover" class="fw-light text-danger">hp cor i5 1040 <br> Ram : 16Go <br> disque : 500 SSD</h6>
+                                  <h6 id="text-hover" class="fw-light text-dark">hp cor i5 1040 <br> Ram : 16Go <br> disque : 500 SSD</h6>
                               </div>
                           </div>
                       </div>
@@ -126,7 +126,7 @@
                           <div class="card text-center">
                               <div class="card-body">
                                   <img src="imgs/2.png" class="mb-3 w-75" alt="coach img" id="image-hover">
-                                  <h6 id="text-hover" class="fw-light text-danger">ALL in ONe <br> Ram : 16Go <br> disque : 256 SSD</h6>
+                                  <h6 id="text-hover" class="fw-light text-dark">ALL in ONe <br> Ram : 16Go <br> disque : 256 SSD</h6>
                               </div>
                           </div>
                       </div>
@@ -134,7 +134,7 @@
                           <div class="card text-center">
                               <div class="card-body">
                                   <img src="imgs/4.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
-                                  <h6 id="text-hover" class="fw-light text-danger">Casque <br> Support <br> Souris</h6>
+                                  <h6 id="text-hover" class="fw-light text-dark">Casque <br> Support <br> Souris</h6>
                               </div>
                           </div>
                       </div>
@@ -145,7 +145,7 @@
                           <div class="card text-center">
                               <div class="card-body">
                                   <img src="imgs/a1.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
-                                  <h6 id="text-hover" class="fw-light text-danger">Macbook pro <br> Ram : 16Go <br> disque : 256 SSD</h6>
+                                  <h6 id="text-hover" class="fw-light text-dark">Macbook pro <br> Ram : 16Go <br> disque : 256 SSD</h6>
                               </div>
                           </div>
                       </div>
@@ -153,7 +153,7 @@
                           <div class="card text-center">
                               <div class="card-body">
                                   <img src="imgs/a2.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
-                                  <h6 id="text-hover" class="fw-light text-danger">Macbook air <br> Ram : 32Go <br> disque : 500 SSD</h6>
+                                  <h6 id="text-hover" class="fw-light text-dark">Macbook air <br> Ram : 32Go <br> disque : 500 SSD</h6>
                               </div>
                           </div>
                       </div>
@@ -161,7 +161,7 @@
                           <div class="card text-center">
                               <div class="card-body">
                                   <img src="imgs/a3.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
-                                  <h6 id="text-hover" class="fw-light text-danger">Macbook air 2019 <br> Ram : 16Go <br> disque : 500 SSD</h6>
+                                  <h6 id="text-hover" class="fw-light text-dark">Macbook air 2019 <br> Ram : 16Go <br> disque : 500 SSD</h6>
                               </div>
                           </div>
                       </div>
@@ -169,7 +169,7 @@
                           <div class="card text-center">
                               <div class="card-body">
                                   <img src="imgs/a4.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
-                                  <h6 id="text-hover" class="fw-light text-danger">Macbook air m2 <br> Ram : 32Go <br> disque : 256 SSD</h6>
+                                  <h6 id="text-hover" class="fw-light text-dark">Macbook air m2 <br> Ram : 32Go <br> disque : 256 SSD</h6>
                               </div>
                           </div>
                       </div>
@@ -180,7 +180,7 @@
                           <div class="card text-center">
                               <div class="card-body">
                                   <img src="imgs/b1.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
-                                  <h6 id="text-hover" class="fw-light text-danger">Samsung <br> A32 <br> Ram : 6</h6>
+                                  <h6 id="text-hover" class="fw-light text-dark">Samsung <br> A32 <br> Ram : 6</h6>
                               </div>
                           </div>
                       </div>
@@ -188,7 +188,7 @@
                           <div class="card text-center">
                               <div class="card-body">
                                   <img src="imgs/b2.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
-                                  <h6 id="text-hover" class="fw-light text-danger">Samsung <br> A56 <br> Ram : 8</h6>
+                                  <h6 id="text-hover" class="fw-light text-dark">Samsung <br> A56 <br> Ram : 8</h6>
                               </div>
                           </div>
                       </div>
@@ -196,7 +196,7 @@
                           <div class="card text-center">
                               <div class="card-body">
                                   <img src="imgs/b3.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
-                                  <h6 id="text-hover" class="fw-light text-danger">Samsung <br> S 10+ <br> Ram : 8</h6>
+                                  <h6 id="text-hover" class="fw-light text-dark">Samsung <br> S 10+ <br> Ram : 8</h6>
                               </div>
                           </div>
                       </div>
@@ -204,7 +204,7 @@
                           <div class="card text-center">
                               <div class="card-body">
                                   <img src="imgs/b4.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
-                                  <h6 id="text-hover" class="fw-light text-danger">Samsung <br> S 24 <br> Ram : 6</h6>
+                                  <h6 id="text-hover" class="fw-light text-dark">Samsung <br> S 24 <br> Ram : 6</h6>
                               </div>
                           </div>
                       </div>
@@ -215,7 +215,7 @@
                           <div class="card text-center">
                               <div class="card-body">
                                   <img src="imgs/c1.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
-                                  <h6 id="text-hover" class="fw-light text-danger">iPhone <br> XR <br> Ram : 6</h6>
+                                  <h6 id="text-hover" class="fw-light text-dark">iPhone <br> XR <br> Ram : 6</h6>
                               </div>
                           </div>
                       </div>
@@ -223,7 +223,7 @@
                           <div class="card text-center">
                               <div class="card-body">
                                   <img src="imgs/c2.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
-                                  <h6 id="text-hover" class="fw-light text-danger">iPhone <br> 12 pro <br> Ram : 8</h6>
+                                  <h6 id="text-hover" class="fw-light text-dark">iPhone <br> 12 pro <br> Ram : 8</h6>
                               </div>
                           </div>
                       </div>
@@ -231,7 +231,7 @@
                           <div class="card text-center">
                               <div class="card-body">
                                   <img src="imgs/c3.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
-                                  <h6  id="text-hover"class="fw-light text-danger">iPhone <br> 14 promax <br> Ram : 16</h6>
+                                  <h6  id="text-hover"class="fw-light text-dark">iPhone <br> 14 promax <br> Ram : 16</h6>
                               </div>
                           </div>
                       </div>
@@ -239,7 +239,7 @@
                           <div class="card text-center">
                               <div class="card-body">
                                   <img src="imgs/c4.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
-                                  <h6 id="text-hover" class="fw-light text-danger">iPhone <br> 15 promax <br> Ram : 16</h6>
+                                  <h6 id="text-hover" class="fw-light text-dark">iPhone <br> 15 promax <br> Ram : 16</h6>
                               </div>
                           </div>
                       </div>
@@ -250,7 +250,7 @@
                           <div class="card text-center">
                               <div class="card-body">
                                   <img src="imgs/d1.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
-                                  <h6 id="text-hover" class="fw-light text-danger">Casque <br> bluetooth <br>Sans fil</h6>
+                                  <h6 id="text-hover" class="fw-light text-dark">Casque <br> bluetooth <br>Sans fil</h6>
                               </div>
                           </div>
                       </div>
@@ -258,7 +258,7 @@
                           <div class="card text-center">
                               <div class="card-body">
                                   <img src="imgs/d2.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
-                                  <h6 id="text-hover" class="fw-light text-danger">écouteur <br> bluetooth <br>Sans fil</h6>
+                                  <h6 id="text-hover" class="fw-light text-dark">écouteur <br> bluetooth <br>Sans fil</h6>
                               </div>
                           </div>
                       </div>
@@ -266,7 +266,7 @@
                           <div class="card text-center">
                               <div class="card-body">
                                   <img src="imgs/d3.jpeg" class="mb-3 w-75" alt="coach img" id="image-hover">
-                                  <h6 id="text-hover" class="fw-light text-danger">écouteur <br> type: C<br>fil</h6>
+                                  <h6 id="text-hover" class="fw-light text-dark">écouteur <br> type: C<br>fil</h6>
                               </div>
                           </div>
                       </div>
@@ -274,7 +274,7 @@
                           <div class="card text-center">
                               <div class="card-body">
                                   <img src="imgs/d4.png" class="mb-3 w-75" alt="coach img" id="image-hover">
-                                  <h6 id="text-hover" class="fw-light text-danger">Casque <br> bluetooth <br>Sans fil</h6>
+                                  <h6 id="text-hover" class="fw-light text-dark">Casque <br> bluetooth <br>Sans fil</h6>
                               </div>
                           </div>
                       </div>
